# protobridge-plugin

./: ProtoBridge.uplugin
.github/workflows/: build_generator.yml  build_grpc.yml
Source/ProtoBridge/: ProtoBridge.Build.cs
Source/ProtoBridge/Private/: ProtoBridge.cpp
Source/ProtoBridge/Public/: ProtoBridge.h
Source/ProtoBridgeCore/: ProtoBridgeCore.Build.cs
Source/ProtoBridgeCore/Private/: ProtoBridgeCoreModule.cpp  ProtobufMathUtils.cpp  ProtobufReflectionUtils.cpp  ProtobufStringUtils.cpp  ProtobufStructUtils.cpp  ProtobufUtils.cpp
Source/ProtoBridgeCore/Public/: ProtoBridgeCoreModule.h  ProtobufAny.h  ProtobufIncludes.h  ProtobufMathUtils.h  ProtobufReflectionUtils.h  ProtobufStringUtils.h  ProtobufStructUtils.h  ProtobufUtils.h
Source/ProtoBridgeGenerator/: CMakeLists.txt
Source/ProtoBridgeGenerator/Private/: CodeBuilder.h  DependencySorter.h  GeneratorContext.h  ProtobufGenerator.cpp  TypeRegistry.h  UECodeGenerator.h
Source/ProtoBridgeGenerator/Private/Generators/: EnumGenerator.h  MessageGenerator.h  OneOfGenerator.h  ProtoLibraryGenerator.h
Source/ProtoBridgeGenerator/Private/Strategies/: EnumFieldStrategy.h  FieldStrategy.h  FieldStrategyFactory.h  MapFieldStrategy.h  MessageFieldStrategy.h  PrimitiveFieldStrategy.h  StringFieldStrategy.h  UnrealStrategies.h
Source/ProtoBridgeGenerator/scripts/: build_mac.sh  build_win.ps1
Source/ProtoBridgeThirdParty/: ProtoBridgeThirdParty.Build.cs
Source/ProtoBridgeThirdParty/scripts/: build_android.sh  build_linux.sh  build_mac.sh  build_win64.ps1
